# turboquant_search

./: .gitattributes  .gitignore  CHANGELOG.md  HF_README.md  README.md  app.py  export_rotated_fvecs.py  parquet_to_fvecs.py  pyproject.toml  requirements.txt  run.sh  setup.py  show_lloyd_centroids.py  slice_fvecs.py
.github/workflows/: ci.yml
notebooks/: quickstart.ipynb
tests/: test_core.py
turboquant_search/: __init__.py  _app_launcher.py  benchmarks.py  cli.py  core.py  dataset_hub.py  datasets.py  faiss_baselines.py
